--- a/home.html
+++ b/home.html
@@ -6,6 +6,52 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <div id="info-usuario">
+
+    </div>
+
+    <script type="module">
+		// Import the functions you need from the SDKs you need
+		import { initializeApp } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-app.js";
+		import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-auth.js";
+		// TODO: Add SDKs for Firebase products that you want to use
+		// https://firebase.google.com/docs/web/setup#available-libraries
+	  
+		// Your web app's Firebase configuration
+		const firebaseConfig = {
+		  apiKey: "AIzaSyBV9qZRYgmjgXZd4InMAHPa6xeA1MXUj5k",
+		  authDomain: "autenticacao-usuario-c6eb5.firebaseapp.com",
+		  projectId: "autenticacao-usuario-c6eb5",
+		  storageBucket: "autenticacao-usuario-c6eb5.appspot.com",
+		  messagingSenderId: "930821960907",
+		  appId: "1:930821960907:web:df5ccf4b5b274b09b6974e"
+		};
+	  
+		// Initialize Firebase
+		const app = initializeApp(firebaseConfig);
+		const auth = getAuth(app);
+
+
+		function exibeDados(user){
+            const containerUserDados = document.getElementById('info-usuario');
+
+            if(user){
+                containerUserDados.innerHTML = `
+                <p>Nome: ${user.displayName}</p>
+                <p>Email: ${user.email}</p>
+            `;
+
+            }else{
+                window.location.href = "index.html";
+
+            }
+        }
+
+        onAuthStateChanged(auth, function(user) {
+            exibeDados(user);
+        });
+			
+
+	</script>
 </body>
 </html>
