--- a/cadastro.html
+++ b/cadastro.html
@@ -57,6 +57,62 @@
 		</div>
 	</div>
 
+    <script type="module">
+		// Import the functions you need from the SDKs you need
+		import { initializeApp } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-app.js";
+		import { getAuth, createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-auth.js";
+		// TODO: Add SDKs for Firebase products that you want to use
+		// https://firebase.google.com/docs/web/setup#available-libraries
+	  
+		// Your web app's Firebase configuration
+		const firebaseConfig = {
+		  apiKey: "AIzaSyBV9qZRYgmjgXZd4InMAHPa6xeA1MXUj5k",
+		  authDomain: "autenticacao-usuario-c6eb5.firebaseapp.com",
+		  projectId: "autenticacao-usuario-c6eb5",
+		  storageBucket: "autenticacao-usuario-c6eb5.appspot.com",
+		  messagingSenderId: "930821960907",
+		  appId: "1:930821960907:web:df5ccf4b5b274b09b6974e"
+		};
+	  
+		// Initialize Firebase
+		const app = initializeApp(firebaseConfig);
+		const auth = getAuth(app);
+
+
+		const formulario = document.getElementById("cadastro");
+
+		formulario.addEventListener('submit', function(event){
+			event.preventDefault();
+
+			const nome = document.getElementById('nome').value;
+			const email = document.getElementById("email").value;
+			const senha = document.getElementById("senha").value;
+			
+
+			createUserWithEmailAndPassword(auth,email, senha)
+			.then(function(userCredential){
+				const user = userCredential.user;
+
+                // Atualizar o perfil do usuário com o nome
+                updateProfile(user, {
+                    displayName: nome
+                }).then(function() {
+                    alert("Usuário Cadastrado com Sucesso");
+                    window.location.href = "home.html";
+                }).catch(function(error) {
+                    alert("Erro ao atualizar perfil: " + error.message);
+                })
+
+			}).catch(function(error){
+				alert("Ocorreu um erro");
+			});
+
+		});
+
+			
+
+	</script>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </html>
