Botão  de Loading

--- a/cadastro.html
+++ b/cadastro.html
@@ -80,6 +80,7 @@
 
 
 		const formulario = document.getElementById("cadastro");
+        const buttonSubmit = document.getElementById('submitButton');
 
 		formulario.addEventListener('submit', function(event){
 			event.preventDefault();
@@ -87,8 +88,14 @@
 			const nome = document.getElementById('nome').value;
 			const email = document.getElementById("email").value;
 			const senha = document.getElementById("senha").value;
-			
 
+            buttonSubmit.disabled = true;
+			buttonSubmit.innerHTML = `
+            <div class="spinner-border text-success" role="status">
+                <span class="sr-only"></span>
+            </div>
+        	`;
+            
 			createUserWithEmailAndPassword(auth,email, senha)
 			.then(function(userCredential){
 				const user = userCredential.user;
@@ -97,7 +104,6 @@
                 updateProfile(user, {
                     displayName: nome
                 }).then(function() {
-                    alert("Usuário Cadastrado com Sucesso");
                     window.location.href = "home.html";
                 }).catch(function(error) {
                     alert("Erro ao atualizar perfil: " + error.message);
