--- a/cadastro.html
+++ b/cadastro.html
@@ -36,6 +36,12 @@
 						<span class="focus-input100"></span>
 					</div>
 
+					
+					<div class="wrap-input100 validate-input m-t-16 p-t-20">
+						<input class="input100" type="file" name="image" id="imagem" required>
+						<span class="focus-input100"></span>
+					</div>
+
 
 					<div class="container-login100-form-btn p-t-20">
 						<button class="login100-form-btn" type="submit" id="submitButton">
@@ -61,6 +67,7 @@
 		// Import the functions you need from the SDKs you need
 		import { initializeApp } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-app.js";
 		import { getAuth, createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-auth.js";
+		import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.2.0/firebase-storage.js";
 		// TODO: Add SDKs for Firebase products that you want to use
 		// https://firebase.google.com/docs/web/setup#available-libraries
 	  
@@ -77,7 +84,7 @@
 		// Initialize Firebase
 		const app = initializeApp(firebaseConfig);
 		const auth = getAuth(app);
-
+		const storage = getStorage(app);
 
 		const formulario = document.getElementById("cadastro");
         const buttonSubmit = document.getElementById('submitButton');
@@ -88,6 +95,8 @@
 			const nome = document.getElementById('nome').value;
 			const email = document.getElementById("email").value;
 			const senha = document.getElementById("senha").value;
+			const img  = document.getElementById("imagem").files[0];
+			
 
             buttonSubmit.disabled = true;
 			buttonSubmit.innerHTML = `
@@ -96,20 +105,34 @@
             </div>
         	`;
             
-			createUserWithEmailAndPassword(auth,email, senha)
+			createUserWithEmailAndPassword(auth, email, senha)
 			.then(function(userCredential){
 				const user = userCredential.user;
 
-                // Atualizar o perfil do usuário com o nome
-                updateProfile(user, {
-                    displayName: nome
-                }).then(function() {
-                    window.location.href = "home.html";
-                }).catch(function(error) {
-                    alert("Erro ao atualizar perfil: " + error.message);
-                })
+				// Fazer upload da imagem para o Firebase Storage
+				const storageRef = ref(storage, `profile_images/${user.uid}`);
+				uploadBytes(storageRef, img)
+				.then(function() {
+					// Obter a URL de download da imagem
+					getDownloadURL(storageRef)
+					.then(function(imgURL) {
+						// Atualizar o perfil do usuário com o nome e URL da imagem
+						updateProfile(user, {
+							displayName: nome,
+							photoURL: imgURL
+						}).then(function() {
+							window.location.href = "perfil.html";
+						}).catch(function(error) {
+							alert("Erro ao atualizar perfil: " + error.message);
+						});
+					});
+				})
+				.catch(function(error) {
+					alert("Erro ao fazer upload da imagem: " + error.message);
+				});
 
 			}).catch(function(error){
+				console.log("Erro ao fazer upload da imagem:", error)
 				alert("Ocorreu um erro");
 			});
 
